--- a/css/style.css
+++ b/css/style.css
@@ -195,6 +195,14 @@ nav {
   margin-bottom: 0;
 }
 
+.author {
+  color: #000050;
+}
+
+.author a {
+  color: #000050;
+}
+
 /*--------------------------------
  Abstract
 ---------------------------------*/
